tests/parsing/smtlib/v2.6/errors/098_get-unsat-assumptions_unclosed_1.expected
File "tests/parsing/smtlib/v2.6/errors/098_get-unsat-assumptions_unclosed_1.smt2", line 1, character 23-24:
1 | (get-unsat-assumptions _)
                           ^
Error while parsing a get-unsat-assumptions command,
      read the reserved word '_',
      but expected a closing parenthesis.
